Fixed minor issues, began making loadGame();