@@ -35,7 +35,9 @@ public class Main {
                     startGame(scanner, inputHandler, playerManager, turnHandler, eventManager);
                     break;
                 case "2":
-                    loadGame();
+                    if (!loadGame(playerManager, turnHandler, eventManager, inputHandler, scanner)) {
+                        startGame(scanner, inputHandler, playerManager, turnHandler, eventManager);
+                    }
                     break;
                 case "3":
                     showCredits();
@@ -84,12 +86,14 @@ public class Main {
         }
 
         // Initialize players
-        //playerManager.initializePlayers(numPlayers, human, difficulty);
-        playerManager.initializeDebugPlayers(numPlayers, human);
+        playerManager.initializePlayers(numPlayers, human, difficulty);
+
+        //DEBUG:
+        //playerManager.initializeDebugPlayers(numPlayers, human);
 
         runGameLoop(playerManager, scanner, turnHandler, eventManager, inputHandler);
 
-        announceWinner(playerManager.getPlayers().get(0)); // Winner is at index 0
+        announceWinner(playerManager.getPlayers().getFirst(), inputHandler, scanner); // Winner is at index 0
     }
 
     private static void runGameLoop(PlayerManager playerManager, Scanner scanner,
@@ -103,7 +107,7 @@ public class Main {
         while (gameRunning) {
             for (int i = 0; i < players.size(); i++) {
                 Player currentPlayer = players.get(i);
-                System.out.println("[DEBUG] TAG: " + currentPlayer.getTag() + ", HP: " + currentPlayer.getHealth());
+                //DEBUG: System.out.println("[DEBUG] TAG: " + currentPlayer.getTag() + ", HP: " + currentPlayer.getHealth());
 
                 // If the player is dead, mark them for removal
                 if (!currentPlayer.isAlive()) {
@@ -137,15 +141,91 @@ public class Main {
         }
     }
 
-    private static void announceWinner(Player winner) {
+    private static void announceWinner(Player winner, GameInputHandler inputHandler, Scanner scanner) {
         if (winner.getTag() == 0) {
             System.out.println(AppConstants.createBox("You have won, congrats!", 35));
         }
         System.out.println(AppConstants.createBox("Winner is player " + winner.getTag() + "!", 35));
+
+        boolean save = inputHandler
+                .getYesNoInput(AppConstants.createSelection("Do you want to save the match to the file [y/n]"), scanner);
+
+        if (save) {
+            System.out.println("Match saved successfully.");
+        } else {
+            System.out.println("Match not saved.");
+        }
     }
 
-    private static void loadGame() {
-        File file = FileManager.createFile("/data/", "game-1.txt");
-        // Implement game loading logic here
+    private static boolean loadGame(PlayerManager playerManager, TurnHandler turnHandler,
+                                EventManager eventManager, GameInputHandler inputHandler, Scanner scanner) {
+        File file = FileManager.createFile("/data/", "games.txt");
+        List<String> lines = FileManager.readFile(file);
+
+        if (lines.isEmpty()) {
+            boolean choice = inputHandler.getYesNoInput(AppConstants.createSelection("No data found in the file or file could not be read. Do you want to start a new game [y/n]"), scanner);
+            return choice;
+        }
+
+        System.out.println("Game Details:");
+        System.out.printf("%-5s %-10s %-15s %-15s %-10s%n", "Index", "Name", "Number of People", "Difficulty", "Character");
+        System.out.println("-------------------------------------------------------------------");
+
+        for (int i = 0; i < lines.size(); i++) {
+            String[] parts = lines.get(i).split(",");
+            if (parts.length == 4) {
+                String name = parts[0].trim();
+                String numberOfPeople = parts[1].trim();
+                String difficulty = parts[2].trim();
+                String character = parts[3].trim();
+                // Print the details with index
+                System.out.printf("%-5d %-10s %-15s %-15s %-10s%n", i + 1, name, numberOfPeople, difficulty, character);
+            } else {
+                System.out.println("Invalid line format: " + lines.get(i));
+            }
+        }
+        int choice = -1;
+        while (choice < 1 || choice > lines.size()) {
+            System.out.print("Enter the number of your choice (1-" + lines.size() + "): ");
+            if (scanner.hasNextInt()) {
+                choice = scanner.nextInt();
+                if (choice < 1 || choice > lines.size()) {
+                    System.out.println("Invalid choice. Please choose a number between 1 and " + lines.size() + ".");
+                }
+            } else {
+                System.out.println("Invalid input. Please enter a number.");
+                scanner.next(); // Clear invalid input
+            }
+        }
+        System.out.println("You selected:");
+        String[] selectedParts = lines.get(choice - 1).split(",");
+
+        String name = selectedParts[0].trim();
+
+        int numPlayers = Integer.parseInt(selectedParts[1].trim());
+        String difficulty = selectedParts[2].trim(); // Difficulty is a string
+        int character = Integer.parseInt(selectedParts[3].trim());
+
+        List<Player> availablePlayers = Player.preMadePlayers.get(difficulty);
+        Player human = null;
+        for (Player currentPlayer : availablePlayers) {
+            if (currentPlayer.getName().equals(name)) {
+                human = currentPlayer;
+            }
+        }
+
+        // Display all selections to the user and confirm
+        System.out.print(AppConstants.createHeader("You selected the following:"));
+        System.out.println("-> Number of Players: " + numPlayers);
+        System.out.println("-> Difficulty: " + difficulty);
+        System.out.println("-> Chosen Character: " + human.getName());
+
+        playerManager.initializePlayers(numPlayers, human, difficulty);
+
+        runGameLoop(playerManager, scanner, turnHandler, eventManager, inputHandler);
+
+        announceWinner(playerManager.getPlayers().getFirst(),inputHandler, scanner);
+
+        return true;
     }
 }
